src/objects/Disposition_Transfer_Details__c/Disposition_Transfer_Details__c.object-meta.xml
<CustomObject>
    <label>Disposition/Transfer Detail</label>
    <nameField>
        <displayFormat>DP-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disposition/Transfer Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>