src/objects/Disposition_Transfer_Details__c/fields/Details_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Details_Remarks__c</fullName>
    <label>Details/Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>