src/objects/Disposition_Transfer_Details__c/fields/Legacy_Id_Trans_Dispo__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id_Trans_Dispo__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>