src/objects/Disposition_Transfer_Details__c/fields/Marketing_P_N__c.field-meta.xml
<CustomField>
    <fullName>Marketing_P_N__c</fullName>
    <formula>Return_Detail__r.Loaner_Line__r.Marketing_P_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing P/N</label>
    <type>Text</type>
</CustomField>