src/objects/Disposition_Transfer_Details__c/fields/Return_Detail__c.field-meta.xml
<CustomField>
    <fullName>Return_Detail__c</fullName>
    <label>Return Detail</label>
    <referenceTo>Return_Detail__c</referenceTo>
    <relationshipLabel>Disposition/Transfer Details</relationshipLabel>
    <relationshipName>Disposition_Transfer_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>