src/objects/Disposition_Transfer_Details__c/fields/Transfer_Party__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Party__c</fullName>
    <label>Transfer Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FNE</fullName>
            </value>
            <value>
                <fullName>PE Team</fullName>
            </value>
            <value>
                <fullName>IC Supplier</fullName>
            </value>
            <value>
                <fullName>Swap P/N</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>