src/objects/Disposition_Transfer_Details__c/recordTypes/Disposition.recordType-meta.xml
<RecordType>
    <fullName>Disposition</fullName>
    <active>true</active>
    <label>Disposition</label>
</RecordType>