src/objects/Disposition_Transfer_Details__c/recordTypes/Transfer.recordType-meta.xml
<RecordType>
    <fullName>Transfer</fullName>
    <active>true</active>
    <label>Transfer</label>
</RecordType>