src/objects/Disposition_Transfer_Details__c/validationRules/Return_Detail_Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Detail_Quantity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c  &lt;=  0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Disposition/Transfer  Quantity Should be  greater than zero</errorMessage>
</ValidationRule>